--- a/AilianBT/Styles/Brushes.xaml
+++ b/AilianBT/Styles/Brushes.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <!--  整体主色调，适用于大标题背景，小标题前景  -->
-    <SolidColorBrush x:Key="AilianBtMainColor" Color="#FFE777AB" />
+    <SolidColorBrush x:Name="AilianBtMainColor" Color="#FFE777AB" />
     <SolidColorBrush x:Key="AilinaBtItemHoverColor" Color="#FFE7ADC8" />
     <SolidColorBrush x:Key="AilinaBtItemSelectColor" Color="#FFAE517D" />
     <!--  未选中标题  -->
