--- a/AilianBT/Views/Controls/PlayerView.xaml
+++ b/AilianBT/Views/Controls/PlayerView.xaml
@@ -119,6 +119,132 @@
             <Setter Property="Foreground" Value="White" />
         </Style>
 
+        <effects:MyRevealBorderBrush x:Key="ProgressRevealTrackBrush" Color="#33FFFFFF" />
+
+        <Style x:Name="ProgressSliderStyle" TargetType="Slider">
+            <Setter Property="Background" Value="{StaticResource AilianBtMainColor}" />
+            <Setter Property="Foreground" Value="{ThemeResource SliderTrackValueFill}" />
+            <Setter Property="FontFamily" Value="{ThemeResource ContentControlThemeFontFamily}" />
+            <Setter Property="FontSize" Value="{ThemeResource ControlContentThemeFontSize}" />
+            <Setter Property="ManipulationMode" Value="None" />
+            <Setter Property="Margin" Value="0" />
+            <Setter Property="Padding" Value="0" />
+            <Setter Property="FocusVisualMargin" Value="0,-4" />
+            <Setter Property="UseSystemFocusVisuals" Value="True" />
+            <Setter Property="IsFocusEngagementEnabled" Value="True" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Slider">
+                        <Grid Background="Transparent">
+                            <Grid.Resources>
+                                <Style x:Key="SliderThumbStyle" TargetType="Thumb">
+                                    <Setter Property="BorderThickness" Value="0" />
+                                    <Setter Property="Background" Value="#FFBBBBBB" />
+                                    <Setter Property="Template">
+                                        <Setter.Value>
+                                            <ControlTemplate TargetType="Thumb">
+                                                <Border Background="{TemplateBinding Background}"
+                                                        BorderBrush="{TemplateBinding BorderBrush}"
+                                                        BorderThickness="0"
+                                                        CornerRadius="18">
+                                                    <Ellipse Width="4"
+                                                             Height="4"
+                                                             Fill="{StaticResource AilianBtMainColor}" />
+                                                </Border>
+                                            </ControlTemplate>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Style>
+                            </Grid.Resources>
+
+                            <Grid x:Name="SliderContainer"
+                                  Background="Transparent"
+                                  Control.IsTemplateFocusTarget="True">
+                                <Grid x:Name="HorizontalTemplate" VerticalAlignment="Center">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+                                    <Rectangle x:Name="HorizontalTrackRect"
+                                               Grid.Row="1"
+                                               Grid.ColumnSpan="3"
+                                               Height="2"
+                                               Fill="{StaticResource ProgressRevealTrackBrush}" />
+                                    <Rectangle x:Name="HorizontalDecreaseRect"
+                                               Grid.Row="1"
+                                               Height="2"
+                                               Fill="{TemplateBinding Background}" />
+                                    <Thumb x:Name="HorizontalThumb"
+                                           Grid.Row="0"
+                                           Grid.RowSpan="3"
+                                           Grid.Column="1"
+                                           Width="16"
+                                           Height="16"
+                                           AutomationProperties.AccessibilityView="Raw"
+                                           DataContext="{TemplateBinding Value}"
+                                           Style="{StaticResource SliderThumbStyle}" />
+                                </Grid>
+                                <Grid x:Name="VerticalTemplate" Visibility="Collapsed" />
+                            </Grid>
+                            <VisualStateManager.VisualStateGroups>
+                                <VisualStateGroup x:Name="CommonStates">
+                                    <VisualState x:Name="Normal" />
+                                    <VisualState x:Name="Pressed">
+                                        <Storyboard>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="HorizontalThumb" Storyboard.TargetProperty="Background">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="#FF555555" />
+                                            </ObjectAnimationUsingKeyFrames>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="SliderContainer" Storyboard.TargetProperty="Background">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource SliderContainerBackgroundPressed}" />
+                                            </ObjectAnimationUsingKeyFrames>
+                                        </Storyboard>
+                                    </VisualState>
+
+                                    <VisualState x:Name="Disabled">
+                                        <Storyboard>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="HorizontalTrackRect" Storyboard.TargetProperty="Fill">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource SliderTrackFillDisabled}" />
+                                            </ObjectAnimationUsingKeyFrames>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="HorizontalThumb" Storyboard.TargetProperty="Background">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource SliderThumbBackgroundDisabled}" />
+                                            </ObjectAnimationUsingKeyFrames>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="SliderContainer" Storyboard.TargetProperty="Background">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource SliderContainerBackgroundDisabled}" />
+                                            </ObjectAnimationUsingKeyFrames>
+                                        </Storyboard>
+                                    </VisualState>
+                                    <VisualState x:Name="PointerOver">
+                                        <Storyboard>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="SliderContainer" Storyboard.TargetProperty="Background">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource SliderContainerBackgroundPointerOver}" />
+                                            </ObjectAnimationUsingKeyFrames>
+                                        </Storyboard>
+                                    </VisualState>
+
+                                </VisualStateGroup>
+                                <VisualStateGroup x:Name="FocusEngagementStates">
+                                    <VisualState x:Name="FocusDisengaged" />
+                                    <VisualState x:Name="FocusEngagedHorizontal">
+                                        <Storyboard>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="SliderContainer" Storyboard.TargetProperty="(Control.IsTemplateFocusTarget)">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="False" />
+                                            </ObjectAnimationUsingKeyFrames>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="HorizontalThumb" Storyboard.TargetProperty="(Control.IsTemplateFocusTarget)">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="True" />
+                                            </ObjectAnimationUsingKeyFrames>
+                                        </Storyboard>
+                                    </VisualState>
+                                </VisualStateGroup>
+
+                            </VisualStateManager.VisualStateGroups>
+                        </Grid>
+
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
         <converters:PlayStatusConverter x:Key="PlayingToVisible" StatusToVisible="Playing" />
         <converters:PlayStatusConverter x:Key="PausedToVisible" StatusToVisible="Paused" />
     </UserControl.Resources>
@@ -164,9 +290,61 @@
                     <RowDefinition />
                     <RowDefinition />
                 </Grid.RowDefinitions>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition Width="68" />
+                    </Grid.ColumnDefinitions>
+                    <Grid x:Name="gridPlayerTitle"
+                          Margin="0,0,8,0"
+                          VerticalAlignment="Center"
+                          Background="Transparent"
+                          SizeChanged="_gridPlayerTitleSizeChanged">
+                        <StackPanel x:Name="panelScrollPlayerTitle"
+                                    Background="Transparent"
+                                    Orientation="Horizontal"
+                                    PointerMoved="_panelScrollPlayerTitlePointerMoved">
+                            <TextBlock x:Name="tbPlayerTitle"
+                                       Margin="0,0,16,0"
+                                       VerticalAlignment="Center"
+                                       FontFamily="Calibri"
+                                       FontSize="13"
+                                       Foreground="#FFE4E4E4"
+                                       SizeChanged="_tbPlayerTitleSizeChanged"
+                                       Text="动物世界真好看之熊出没动物世界真好看之熊出没动物世界真好看之熊出没" />
+                            <TextBlock x:Name="tbPlayerTitleSecond"
+                                       VerticalAlignment="Center"
+                                       FontFamily="Calibri"
+                                       FontSize="13"
+                                       Foreground="#FFE4E4E4"
+                                       Text="{x:Bind tbPlayerTitle.Text, Mode=OneWay}"
+                                       Visibility="Collapsed" />
+                        </StackPanel>
+                    </Grid>
+                    <StackPanel Grid.Column="1"
+                                HorizontalAlignment="Right"
+                                VerticalAlignment="Center"
+                                Orientation="Horizontal">
+                        <TextBlock VerticalAlignment="Center"
+                                   FocusVisualPrimaryBrush="#FFE2E2E2"
+                                   FontSize="12"
+                                   Foreground="#FFE4E4E4"
+                                   Text="00:00" />
+                        <TextBlock Margin="2,0"
+                                   VerticalAlignment="Center"
+                                   FontSize="12"
+                                   Foreground="#FFC4C4C4"
+                                   Text="/" />
+                        <TextBlock VerticalAlignment="Center"
+                                   FontSize="12"
+                                   Foreground="#FFC4C4C4"
+                                   Text="03:15" />
+                    </StackPanel>
+                </Grid>
                 <Slider Grid.Row="1"
                         VerticalAlignment="Top"
-                        Minimum="0" />
+                        Minimum="0"
+                        Style="{StaticResource ProgressSliderStyle}" />
             </Grid>
         </Grid>
     </Grid>
